# persistables

./: .gitignore  pyproject.toml  run_metaclass.py  run_persistables.py  run_test.py
persistables/: __init__.py  core.py  manager.py  mixins.py  persistable.py
