[tool.poetry]
name = "persistables"
version = "0.0.1"
description = ""
authors = ["Patrick Schaffner <patrick.schaffner@zauberberg.io>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19.5"
sqlalchemy = "^1.3.22"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
