[tool.poetry]
name = "persistables"
version = "0.0.1"
description = ""
authors = ["PSCHA"]

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.19.5"
sqlalchemy = "^1.3.22"
pandas = "^1.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
